--- a/Lab02 - Connected Components/lab03.ipynb
+++ b/Lab02 - Connected Components/lab03.ipynb
@@ -38,11 +38,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code here"
+    "# code here# type your code here\n",
+    "# Python code to read image\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "img = cv2.imread(\"art8.png\", cv2.IMREAD_GRAYSCALE)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current node: 0\n",
+      "  Found 1\n",
+      "Current node: 1\n",
+      "{0, 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import queue\n",
+    "def find_connectivity(img, i, j):\n",
+    "    dx = [0, 0, 1, 1, 1, -1, -1, -1]\n",
+    "    dy = [1, -1, 0, 1, -1, 0, 1, -1]\n",
+    "    x = []\n",
+    "    y = []\n",
+    "    q = queue.Queue()\n",
+    "    if img[i][j] == 0:\n",
+    "        q.put((i, j))\n",
+    "    while q.empty() == False:\n",
+    "        u, v = q.get()\n",
+    "        x.append(u)\n",
+    "        y.append(v)\n",
+    "        for k in range(8):\n",
+    "            xx = u + dx[k]\n",
+    "            yy = v + dy[k]\n",
+    "            if img[xx][yy] == 0:\n",
+    "                img[xx][yy] = 2\n",
+    "                q.put((xx, yy))\n",
+    "    return x, y"
    ]
   },
   {
@@ -87,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
